# world_model_phys

./: .gitignore  Makefile  PROTOCOL_lingbot_videophy2_standard_eval.md  README_physical_consistency_workflow_v1.md  REPORT_h20_问题概述.md  REPORT_h20_问题概述_综合版.md  REPORT_videophy2_h20_问题概述.md  REPORT_videophy2_h20_问题概述_legacy_full.md  REVIEW_physical_consistency_real_repo_audit_v1.md  WEEKLY_REPORT_physical_consistency_2026-04-14.pptx  WEEKLY_REPORT_physical_consistency_2026-04-14_汇报稿.md  h20_2_path_probe_20260409_163904.txt  pyproject.toml  smoke.txt  tree_out.txt
configs/: accelerate_stage1_h20_bf16_mixed_safe.yaml  accelerate_stage1_h20_ddp_bf16_mixed_safe.yaml  accelerate_stage1_h20_fp32_stable.yaml  accelerate_trd_v1.yaml  accelerate_trd_v1_deepspeed_experimental.yaml  accelerate_trd_v1_h20_perf.yaml  accelerate_trd_v1_lowmem.yaml  accelerate_trd_v1_ultralowmem.yaml  accelerate_trd_v1_zero2_h20.yaml  deepspeed_stage1_zero3_h20_bf16_mixed_safe.json  deepspeed_stage1_zero3_h20_fp32_stable.json  deepspeed_trd_v1_zero2_h20.json  deepspeed_trd_v1_zero3.json  deepspeed_trd_v1_zero3_h20_perf.json  deepspeed_trd_v1_zero3_lowmem.json  deepspeed_trd_v1_zero3_ultralowmem.json  deepspeed_zero3.json  eval_base.yaml  eval_stage1_epoch2.yaml  eval_trd_v1.yaml  path_config_cluster.env  path_config_pai.env  physics_iq_dataset_eval.yaml  train_stage1_physinone_cam.yaml  train_stage1_physinone_cam_75f_384.yaml  train_stage1_physinone_cam_75f_384_bf16_trainonly.yaml  train_stage2_phycsgo_act.yaml  train_stage3_phycsgo_trd.yaml  train_trd_v1.yaml  train_trd_v1_h20_perf.yaml  videophy2_dataset_autoeval.yaml  videophy2_eval.yaml
scripts/: analyze_phy_csgo_capacity.py  attach_val_split.py  build_csgo_test_subset.sh  build_fixed_val_sets.py  build_weekly_report_ppt.py  build_weighted_phy_csgo_dataset.py  run_csgo_eval.sh  (+48 more)
(+87 files in other folders)
